[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/World/pokemon_PC.gd" type="Script" id=1]
[ext_resource path="res://obstacle.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI components/Dialog_.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Character" type="Area2D"]
position = Vector2( 744, 168 )
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( -336, 40 )

[node name="ItemList" type="ItemList" parent="."]
margin_left = -600.0
margin_top = -120.0
margin_right = -496.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog_" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -280.0
margin_top = 184.0
margin_right = -280.0
margin_bottom = 184.0
[connection signal="area_entered" from="." to="." method="_on_Character_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Character_area_exited"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
